namespaces/live.cloud-platform.service.justice.gov.uk/prison-data-compliance-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prison-data-compliance-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "prison-data-compliance"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/dps-data-compliance.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/slack-channel: "dps_tech_team"
    cloud-platform.justice.gov.uk/team-name: "dps-tech-team"
